--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "eslint-config-airbnb": "^16.1.0",
     "react": "^16.3.1",
+    "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
